--- a/SQLite11/SQLite11/SQLite11.csproj
+++ b/SQLite11/SQLite11/SQLite11.csproj
@@ -45,6 +45,9 @@
     <Compile Include="SubPage.xaml.cs">
       <DependentUpon>SubPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Subpage2.xaml.cs">
+      <DependentUpon>Subpage2.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +88,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SubPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Subpage2.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
